# ROSE-data

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
data/SoS/: 20201102_Prorail_parameters_SOS.csv  SOS.json  Segments_TKI_v2.dbf  Segments_TKI_v2.sbn  Segments_TKI_v2.sbx  Segments_TKI_v2.shp  Segments_TKI_v2.shx  segments.csv  soilprofiles.csv
data/data_discontinuities/: kruising.gpkg  kruising.json  overweg.gpkg  overweg.json  pdok_data.url  trace.gpkg  trace.json  wissel.gpkg  wissel.json
data_proc/: SoS.py  __version__.py  data_discontinuities.py  data_fusion.py  fugro.py  ricardo.py  sensar.py
