[metadata]
name = ROSE-data
version = attr: data_proc.__version__
author = ROSE team
description = Risk model track deformation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
	Operating System :: Unix

[options]
packages = data_proc
include_package_data = True
install_requires =
    matplotlib==3.8.3
    numpy==1.26.4
    scipy==1.12.0
    tqdm==4.66.2
    pyproj==3.6.1
    pyshp==2.3.1
    rose@git+https://github.com/PlatypusBytes/ROSE.git
    SignalProcessing@git+https://github.com/PlatypusBytes/SignalProcessing
python_requires = >=3.9

[options.extras_require]
testing =
    pytest==8.0.2
    pytest-cov==4.1.0
    tox==4.13.0
docs =
    sphinx==7.2.6
    sphinx-rtd-theme==2.0.0